--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "whatsup-dracula",
-  "title": "Whatsup Dracula",
-  "version": "0.1.1",
-  "description": "Dracula theme for Whatsup web",
+  "name": "whatsapp-dracula",
+  "title": "Whatsapp Dracula",
+  "version": "0.5.0",
+  "description": "Dracula theme for Whatsapp web",
   "license": "CC-BY-SA-4.0",
-  "repository": "0xc0d3d00d/whatsup-dracula",
-  "homepage": "https://github.com/0xc0d3d00d/whatsup-dracula",
-  "main": "whatsup-dracula.user.css",
+  "repository": "0xc0d3d00d/whatsapp-dracula",
+  "homepage": "https://github.com/0xc0d3d00d/whatsapp-dracula",
+  "main": "whatsapp-dracula.user.css",
   "engines": {
     "node": ">=10"
   },
@@ -24,11 +24,11 @@
     "clean": "npm run perfectionist && node tools/fix-perfectionist.js",
     "eslint": "eslint tools/*.js",
     "lint": "npm run eslint && npm run stylelint",
-    "major": "versions -C -p major whatsup-dracula.user.css",
-    "minor": "versions -C -p minor whatsup-dracula.user.css",
-    "patch": "versions -C -p patch whatsup-dracula.user.css",
-    "perfectionist": "perfectionist whatsup-dracula.user.css whatsup-dracula.css --indentSize 2 --maxAtRuleLength 250",
-    "stylelint": "stylelint whatsup-dracula.user.css",
+    "major": "versions -C -g -p major whatsapp-dracula.user.css",
+    "minor": "versions -C -g -p minor whatsapp-dracula.user.css",
+    "patch": "versions -C -g -p patch whatsapp-dracula.user.css",
+    "perfectionist": "perfectionist whatsapp-dracula.user.css whatsapp-dracula.css --indentSize 2 --maxAtRuleLength 250",
+    "stylelint": "stylelint whatsapp-dracula.user.css",
     "test": "npm run eslint && npm run stylelint",
     "update": "updates -cu && npm install"
   }
