--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatsapp-dracula",
   "title": "Whatsapp Dracula",
-  "version": "0.5.0",
+  "version": "0.1.2",
   "description": "Dracula theme for Whatsapp web",
   "license": "CC-BY-SA-4.0",
   "repository": "0xc0d3d00d/whatsapp-dracula",
@@ -24,9 +24,9 @@
     "clean": "npm run perfectionist && node tools/fix-perfectionist.js",
     "eslint": "eslint tools/*.js",
     "lint": "npm run eslint && npm run stylelint",
-    "major": "versions -C -g -p major whatsapp-dracula.user.css",
-    "minor": "versions -C -g -p minor whatsapp-dracula.user.css",
-    "patch": "versions -C -g -p patch whatsapp-dracula.user.css",
+    "major": "versions -C -p major whatsapp-dracula.user.css",
+    "minor": "versions -C -p minor whatsapp-dracula.user.css",
+    "patch": "versions -C -p patch whatsapp-dracula.user.css",
     "perfectionist": "perfectionist whatsapp-dracula.user.css whatsapp-dracula.css --indentSize 2 --maxAtRuleLength 250",
     "stylelint": "stylelint whatsapp-dracula.user.css",
     "test": "npm run eslint && npm run stylelint",
